--- a/seller/seller.css
+++ b/seller/seller.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  background: #0b1220;
+  background: #969799;
   color: #e5e7eb;
 }
 
@@ -104,3 +104,4 @@ footer {
   opacity: 0.6;
   margin-top: 24px;
 }
+
