--- a/seller/seller.css
+++ b/seller/seller.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  background: #0b1220;
+  background: #a6bce9;
   color: #e5e7eb;
 }
 
@@ -136,3 +136,4 @@ footer {
     padding: 30px 16px;
   }
 }
+
