--- a/seller/seller.css
+++ b/seller/seller.css
@@ -18,6 +18,7 @@ body {
 
 /* HEADER */
 header {
+    color: black;
   text-align: center;
   margin-bottom: 40px;
 }
@@ -29,6 +30,7 @@ header img {
 }
 
 h1 {
+    color: black;
   margin: 0;
   font-size: 28px;
 }
@@ -120,6 +122,7 @@ button:hover,
 
 /* FOOTER */
 footer {
+  color: black;
   text-align: center;
   font-size: 13px;
   opacity: 0.65;
@@ -136,4 +139,3 @@ footer {
     padding: 30px 16px;
   }
 }
-
